Missing definition for JIMAGE_NOT_FOUND

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: tools
    • b116
    • Not verified

      Comments in these two source files mention JIMAGE_NOT_FOUND, but JIMAGE_NOT_FOUND is not defined anywhere:

      src/java.base/share/native/libjimage/jimage.cpp: * function returns JIMAGE_NOT_FOUND and the value of size is undefined.
      src/java.base/share/native/libjimage/jimage.hpp: * function returns JIMAGE_NOT_FOUND and the value of size is undefined.

            Assignee:
            Jim Laskey
            Reporter:
            Harold Seigel (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: