8147426: Missing definition for JIMAGE_NOT_FOUND

Reviewed-by: hseigel, alanb